Fix contrast issues

--- a/website/components/about/about.scss
+++ b/website/components/about/about.scss
@@ -132,11 +132,11 @@
         display: flex;
         justify-content: center;
 
-        &>* {
+        & > * {
           width: 25%;
         }
 
-        &> :nth-child(even) {
+        & > :nth-child(even) {
           background-color: $secondary-background;
 
           .hero-block-button::before {
@@ -144,7 +144,7 @@
           }
         }
 
-        &> :nth-child(odd) {
+        & > :nth-child(odd) {
           background-color: $background;
 
           .hero-block-button::before {
@@ -392,7 +392,7 @@
 
     button {
       position: relative;
-      width: 18rem;
+      width: 20rem;
       height: 5rem;
       border-radius: 25rem;
       display: flex;
@@ -433,7 +433,6 @@
 
       &.secondary {
         background-color: transparent;
-        color: $accent;
         border: 1px solid $accent;
         transition: 0.2s linear;
 
@@ -478,10 +477,12 @@
         width: 100%;
         height: 100%;
         background: transparent;
-        background: linear-gradient(180deg,
-            transparent 0%,
-            transparent 85%,
-            $secondary-background 100%);
+        background: linear-gradient(
+          180deg,
+          transparent 0%,
+          transparent 85%,
+          $secondary-background 100%
+        );
         top: 0;
         left: 0;
         opacity: 1;
@@ -514,11 +515,11 @@
         flex-direction: column;
         align-items: center;
 
-        &>* {
+        & > * {
           width: 100%;
         }
 
-        &> :nth-child(even) {
+        & > :nth-child(even) {
           background-color: $background;
 
           .hero-block-button::before {
@@ -526,7 +527,7 @@
           }
         }
 
-        &> :nth-child(odd) {
+        & > :nth-child(odd) {
           background-color: $secondary-background;
 
           .hero-block-button::before {
@@ -638,7 +639,6 @@
 @media screen and (max-width: 1260px) {
   #about-page {
     .hero-block-element {
-
       &:hover,
       &:focus-within {
         .hero-block-icon {
